--- a/ConstructionSiteLibrary/Components/Categories/FormCategories.razor
+++ b/ConstructionSiteLibrary/Components/Categories/FormCategories.razor
@@ -7,7 +7,7 @@
 <div class="">
     <RadzenTemplateForm TItem="FormCategoriesData" Data=@form Submit=@Save>
         <RadzenStack class="px-2">
-            <RadzenFormField Text="Nome <span style='color:red'> (obbligatorio)</span>" Variant="@variant">
+            <RadzenFormField Text="Nome (obbligatorio)" Variant="@variant">
                 <ChildContent>
                     <RadzenTextBox Name="nome" @bind-Value="@form.Nome" />
                 </ChildContent>
