--- a/ConstructionSiteLibrary/Components/Choices/FormChoice.razor
+++ b/ConstructionSiteLibrary/Components/Choices/FormChoice.razor
@@ -7,7 +7,7 @@
 <div class="">
     <RadzenTemplateForm TItem="FormChoiceData" Data=@form Submit=@Save>
         <RadzenStack class="px-2">
-            <RadzenFormField Text="Tag - Max 10 caratteri<span style='color:red'> (obbligatorio)</span>" Variant="@variant">
+            <RadzenFormField Text="Tag - Max 10 caratteri (obbligatorio)" Variant="@variant">
                 <ChildContent>
                     <RadzenTextBox Name="Tag" @bind-Value="@form.Tag" MaxLength="10" />
                 </ChildContent>
@@ -16,7 +16,7 @@
                 </Helper>
             </RadzenFormField>
 
-            <RadzenFormField Text="Valore <span style='color:red'> (obbligatorio)</span>" Variant="@variant">
+            <RadzenFormField Text="Valore (obbligatorio)" Variant="@variant">
                 <ChildContent>
                     <RadzenTextBox Name="Value" @bind-Value="@form.Value" />
                 </ChildContent>
