modifiche ai testi per sostituzione cantiere con sito

--- a/ConstructionSiteLibrary/Components/ConstructorSites/ConstructorSitesView.razor
+++ b/ConstructionSiteLibrary/Components/ConstructorSites/ConstructorSitesView.razor
@@ -17,7 +17,7 @@
 else
 {
     <div class="mx-2 my-5">
-        <SectionTitle PageTitle="I miei cantieri" ButtonText="+ aggiungi cantiere" SearchPlaceholder="Cerca cantiere"
+        <SectionTitle PageTitle="I miei siti" ButtonText="+ aggiungi sito" SearchPlaceholder="Cerca sito"
                       OnButtonClicked="@OpenForm" OnSearchChanged="@SearchChanged" />
         <div>
             <Repeater Data="@displayedSites" TItem="SiteModel">
