--- a/ConstructionSiteLibrary/Components/ConstructorSites/FormConstructorSite.razor
+++ b/ConstructionSiteLibrary/Components/ConstructorSites/FormConstructorSite.razor
@@ -1,4 +1,4 @@
-﻿@using Shared.Documents
+﻿f@using Shared.Documents
 
 @inject ConstructorSitesRepository SiteRepository
 @inject CompaniesRepository CompaniesRepository
