--- a/ConstructionSiteLibrary/Layout/NavMenu.razor
+++ b/ConstructionSiteLibrary/Layout/NavMenu.razor
@@ -52,7 +52,7 @@
                 <span class="bi bi-house-door" aria-hidden="true"></span>
                 @if (!@IconMenuActive)
                 {
-                    <label>I miei cantieri</label>
+                    <label>I miei siti</label>
                 }
             </NavLink>
         </div>
