--- a/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesSignsSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesSignsSection.razor
@@ -36,8 +36,8 @@ else
                         @if (Document.CseSignature is not null)
                         {
                             <div class="col-12 p-2 ">
-                                <img src="@Document.CseSignature.Sign" width="@Document.CseSignature.Width"
-                                     height="@Document.CseSignature.Height" style="max-width:100%; height:100%;" />
+                                <img src="@Document.CseSignature.Sign" width="@Document.CseSignature.Sign"
+                                     height="@Document.CseSignature.Sign" style="max-width:100%; height:100%;" />
                             </div>
                         }
                         else
@@ -159,7 +159,7 @@ else
                                 QuestionOrder = question.Order, //12
                             });
 
-                        var cs = Document.Signatures.Where(x => x.CompanyId == companyId).FirstOrDefault();
+                        var cs = Document.OtherSignatures.Where(x => x.CompanyId == companyId).FirstOrDefault();
                         if (cs is not null)
                         {
                             if (!cs.ReporteQuestionsIds.Contains(question.Id))
@@ -174,7 +174,7 @@ else
                                     CompanyId = reportedCompany.Company.Id,
                                 };
                             cs.ReporteQuestionsIds.Add(question.Id);
-                            Document.Signatures.Add(cs);
+                            Document.OtherSignatures.Add(cs);
                         }
                     }
                 }
@@ -246,7 +246,7 @@ else
         if (currentCompany is CompanyQuestionsReported)
         {
             currentCompany.Sign = signature;
-            var compSign = Document.Signatures.Where(x => x.CompanyId == currentCompany.Company.Id).SingleOrDefault();
+            var compSign = Document.OtherSignatures.Where(x => x.CompanyId == currentCompany.Company.Id).SingleOrDefault();
             //non esiste una firma per questa azienda la creo nuova
             if (compSign is null)
             {
@@ -259,7 +259,7 @@ else
                         Height = currentCompany.Sign.Height,
                         Name = currentCompany.Name,
                     };
-                Document.Signatures.Add(compSign);
+                Document.OtherSignatures.Add(compSign);
             }
             //aggiorno la firma precedente
             else
