--- a/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesSignsSection.razor
+++ b/ConstructionSiteLibrary/Components/Documents/Compilation/CompaniesSignsSection.razor
@@ -36,8 +36,7 @@ else
                         @if (Document.CseSignature is not null)
                         {
                             <div class="col-12 p-2 ">
-                                <img src="@Document.CseSignature.Sign" width="@Document.CseSignature.Sign"
-                                     height="@Document.CseSignature.Sign" style="max-width:100%; height:100%;" />
+                                <img src="@Document.CseSignature.Sign"  style="max-width:100%; height:100%;" />
                             </div>
                         }
                         else
