--- a/ConstructionSiteLibrary/Components/Categories/FormCategories.razor
+++ b/ConstructionSiteLibrary/Components/Categories/FormCategories.razor
@@ -16,7 +16,11 @@
                                              Text="Il campo nome è obbligatorio" />
                 </Helper>
             </RadzenFormField>
-           
+            <RadzenFormField Text="Topic" Variant="@variant">
+                <ChildContent>
+                    <RadzenTextBox Name="topic" @bind-Value="@form.Topic" />
+                </ChildContent>
+            </RadzenFormField>
             <RadzenButton ButtonType="ButtonType.Submit" Icon="save" Text="Salva" class="buttonSalva" IsBusy=@onSaving
                           BusyText="Salvataggio in corso" />
         </RadzenStack>
