--- a/ConstructionSiteLibrary/Components/Templates/TemplateCreation.razor
+++ b/ConstructionSiteLibrary/Components/Templates/TemplateCreation.razor
@@ -15,7 +15,7 @@ else
     <h2>@Param</h2>
 
     <div class="marginComponent shadow rounded marginDivComponent">
-        <RadzenFormField Text="Titolo <span style='color:red'> (obbligatorio)</span>" Variant="@variant" class="my-4 formFieldTitolo">
+        <RadzenFormField Text="Titolo(obbligatorio)" Variant="@variant" class="my-4 formFieldTitolo">
             <ChildContent>
                 <RadzenTextBox Name="Titolo" @bind-Value="@title" />
             </ChildContent>
