--- a/ConstructionSiteLibrary/Components/Documents/DocumentViewer.razor
+++ b/ConstructionSiteLibrary/Components/Documents/DocumentViewer.razor
@@ -59,39 +59,21 @@ else
                 <div class="border my-4 paddingSezione">
                     <div class="row">
                         <div class="col">
-                            <RadzenText>Committente: <strong>@DocumentUtils.PrintDocumentField("")</strong></RadzenText>
+                            <RadzenText>Sito: <strong>@DocumentUtils.PrintDocumentField(Document?.Site.Name)</strong></RadzenText>
                         </div>
                         <div class="col">
-                            <RadzenText>Lavori di: <strong>@DocumentUtils.PrintDocumentField(Document?.Site.JobDescription)</strong></RadzenText>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <RadzenText>Indirizzo cantiere: <strong>@DocumentUtils.PrintDocumentField(Document?.Site.Address)</strong></RadzenText>
-                        </div>
-                        <div class="col">
-                            <RadzenText>Inizio lavori: <strong>@StampaData(Document?.Site.StartDate)</strong></RadzenText>
+                            <RadzenText>Indirizzo: <strong>@DocumentUtils.PrintDocumentField(Document?.Site.Address)</strong></RadzenText>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col">
-                            <RadzenText>Notifica preliminare inizio cantiere del: <strong>@StampaData(Document?.Site.PreliminaryNotificationStartDate)</strong></RadzenText>
-                        </div>
-                        <div class="col">
-                            <RadzenText>Id. SICO: <strong>@DocumentUtils.PrintDocumentField(Document?.Site.IdSico)</strong></RadzenText>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <RadzenText> Notifica preliminare in corso: <strong>@StampaData(Document?.Site.PreliminaryNotificationInProgress)</strong></RadzenText>
-                        </div>
-                        <div class="col">
-                            <RadzenText>Id. SICO: <strong>@DocumentUtils.PrintDocumentField(Document?.Site.IdSicoInProgress)</strong></RadzenText>
+                            <RadzenText>note: <strong>@DocumentUtils.PrintDocumentField(Document?.Site.Note)</strong></RadzenText>
                         </div>
                     </div>
                 </div>
 
             </div>
+            @* COMPANIES DOCUMENTO *@
             @if(Document?.Companies.Count > 0)
             {
                 <div class="pdfElement">
@@ -103,7 +85,6 @@ else
                         </RadzenText>
                     </div>
                 </div>
-                @* COMPANY DOCUMENTO *@
                 @foreach (var company in Document?.Companies)
                 {
                     <div class="pdfElement">
@@ -307,9 +288,9 @@ else
                         </strong>
                     </RadzenText>
                 </div>
-                <div class="paddingDescrizione marginYResponsive border">
+@*                 <div class="paddingDescrizione marginYResponsive border">
                     <RadzenText Style="text-decoration:underline">Le firme di presa visione e accettazione di seguito fanno riferimento alle prescrizioni riportate nel verbale, riferite all'impresa di appartenenza e relativi subappaltatori.</RadzenText>
-                </div>
+                </div> *@
                 <div class="hstack">
                     <RadzenText Style="margin-right: 8px; vertical-align: middle;">Data: <strong>@StampaData(Document.SignDate)</strong></RadzenText>
                 </div>
@@ -324,7 +305,7 @@ else
                             @if (Document.CseSignature is not null)
                             {
                                 <div class="col-12 p-2">
-                                    <img src="@Document.CseSignature.Sign" width="@Document.CseSignature.Width" height="@Document.CseSignature.Height" style="max-width:100%; height:100%" />
+                                    <img src="@Document.CseSignature.Sign" style="max-width:100%; height:100%" />
                                 </div>
                             }
                             else
@@ -335,11 +316,11 @@ else
                         </div>
                     </div>
                     <div class="col-6">
-                        <div class="mb-1">
-                            <RadzenText Style="text-decoration:underline">Per presa visione e accettazione</RadzenText>
-                        </div>
                         @if(Document.OtherSignatures.Count > 0)
                         {
+                            <div class="mb-1">
+                                <RadzenText Style="text-decoration:underline">Per presa visione e accettazione</RadzenText>
+                            </div>
                             <div class="paddingDescrizione border">
                                 <RadzenText>Per: <strong>@DocumentUtils.PrintCompanyFromSignature(Document.OtherSignatures[0], Document)</strong></RadzenText>
                                 @if (!string.IsNullOrEmpty(firstCompanySignature.Sign))
