--- a/ConstructionSiteLibrary/Components/Templates/Wizard/TemplateNameStep.razor
+++ b/ConstructionSiteLibrary/Components/Templates/Wizard/TemplateNameStep.razor
@@ -12,7 +12,7 @@ else
 {
     <fieldset class="card cardClass round-border divCard mb-2">
             <legend class="fieldset-title">Inserisci un nome per il template</legend>
-            <RadzenFormField Text="Nome <span style='color:red'> (obbligatorio)</span>" Variant="@variant"
+            <RadzenFormField Text="Nome (obbligatorio)" Variant="@variant"
                 class="formFieldTitolo">
                 <ChildContent>
                     <RadzenTextBox Name="Nome" @bind-Value="@CurrentTemplate.NameTemplate" />
