sistemate card domande che era incompleta

--- a/ConstructionSiteLibrary/Components/Questions/TableQuestionMobile.razor
+++ b/ConstructionSiteLibrary/Components/Questions/TableQuestionMobile.razor
@@ -1,5 +1,6 @@
 ﻿@using ConstructionSiteLibrary.Managers
 @using ConstructionSiteLibrary.Repositories
+@using ConstructionSiteLibrary.Components.Generics
 @using Shared
 
 @inject DialogService DialogService
@@ -15,33 +16,37 @@
 else
 {
     @* La tabella delle questions *@
-    <div class="marginComponent">
+    <div class="marginMobile">
 
-        <RadzenButton Icon="add" Text="Nuovo" ButtonStyle="ButtonStyle.Primary" class="ButtonAdd"
-            Style="margin-bottom:2rem;margin-top:1rem;" Click="@(()=>OpenNewForm())" />
-
-        @foreach (var question in questions)
-        {
-            <RadzenCard Variant="Variant.Filled" Class="rz-my-2 rz-mx-auto" Style="max-width: 420px">
-                <RadzenStack Gap="0">
-                    <RadzenText TextStyle="TextStyle.Overline" class="rz-display-flex rz-mt-2 rz-my-0">Nome
-                    </RadzenText>
-                    <RadzenText TextStyle="TextStyle.Body1"><b>@question.Text</b></RadzenText>
-                    <RadzenText TextStyle="TextStyle.Overline" class="rz-display-flex rz-mt-2 rz-my-0">Categoria
-                    </RadzenText>
-                    <RadzenText TextStyle="TextStyle.Body1"><b>@question.IdCategory</b></RadzenText>
-                    <RadzenText TextStyle="TextStyle.Overline" class="rz-display-flex rz-mt-2 rz-my-0">Argomento
-                    </RadzenText>
-
-                    @* Mostro i bottoni solo se ho i permessi di modifica *@
-                    <RadzenRow Class="rz-mt-2" JustifyContent="JustifyContent.Right" Gap="1rem">
-                        <RadzenButton Icon="edit" ButtonStyle="ButtonStyle.Light" Variant="Variant.Filled"
-                            Size="ButtonSize.Medium" Click="@(()=>OpenUpdateForm(@question))" class="buttonEdit" />
-                        <RadzenButton Icon="delete" ButtonStyle="ButtonStyle.Light" Variant="Variant.Filled"
-                            Size="ButtonSize.Medium" Click="@(()=>Disable(@question))" class="buttonDelete" />
-                    </RadzenRow>
-                </RadzenStack>
-            </RadzenCard>
-        }
+        <SectionTitle PageTitle="Domande" ButtonText="+ aggiungi domanda" SearchPlaceholder="Cerca domanda"
+            OnButtonClicked="@OpenNewForm" OnSearchChanged="@SearchChanged" />
     </div>
+    <ul class="list-unstyled">
+        @foreach (var question in displayedQuestions)
+        {
+            <li>
+                <div class="marginListEntry">
+                    <RadzenStack Gap="0">
+                        <RadzenRow Class="rz-mt-2" JustifyContent="JustifyContent.SpaceBetween">
+                            <RadzenColumn>
+                                <RadzenText TextStyle="TextStyle.Overline" class="rz-display-flex rz-mt-2 rz-my-0">
+                                    Categoria
+                                </RadzenText>
+                                <RadzenText TextStyle="TextStyle.Body1"><b>@question.CategoryName</b></RadzenText>
+                            </RadzenColumn>
+                            <ButtonDropdown Object="@question" OnUpdateClicked="@OpenUpdateForm" OnDeleteClicked="@Hide" />
+                        </RadzenRow>
+                        <RadzenText TextStyle="TextStyle.Overline" class="rz-display-flex rz-mt-2 rz-my-0">
+                            Quesito
+                        </RadzenText>
+                        <RadzenText TextStyle="TextStyle.Body1"><b>@question.Text</b></RadzenText>
+
+                    </RadzenStack>
+                </div>
+                <hr class="solid">
+
+            </li>
+        }
+    </ul>
+
 }
