--- a/ConstructionSiteLibrary/Pages/QuestionPage.razor
+++ b/ConstructionSiteLibrary/Pages/QuestionPage.razor
@@ -15,14 +15,14 @@
 
      private void ScreenDimensionObserver(ScreenDimension? dimension)
     {
-        // if (dimension == ScreenDimension.S || dimension == ScreenDimension.XS)
-        // {
-        //     selectedType = typeof(TableQuestionMobile);
-        // }
-        // else
-        // {
-             //selectedType = typeof(TableQuestion);
-        // }
+        if (dimension == ScreenDimension.S || dimension == ScreenDimension.XS)
+        {
+            selectedType = typeof(TableQuestionMobile);
+        }
+        else
+        {
+            selectedType = typeof(TableQuestion);
+        }
 
         StateHasChanged();
     }
