sostituiti riferimentia cantieri con siti

--- a/ConstructionSiteLibrary/Components/ConstructorSites/ConstructorSitesView.razor
+++ b/ConstructionSiteLibrary/Components/ConstructorSites/ConstructorSitesView.razor
@@ -44,7 +44,7 @@ else
     private List<SiteModel> displayedSites = [];
     private bool onLoading = false;
     private string search = "";
-    private string pagingSummaryFormat = "Pagina {0} di {1} (Totale {2} cantieri)";
+    private string pagingSummaryFormat = "Pagina {0} di {1} (Totale {2} siti)";
     private int count = 0;
     private int pageSize = GlobalVariables.PageSize;
     private int pageIndex = 0;
