--- a/ConstructionSiteLibrary/Pages/Home.razor
+++ b/ConstructionSiteLibrary/Pages/Home.razor
@@ -7,7 +7,7 @@
 
 <OnlineSyncComponent />
 <ScreenComponent OnScreenSizeChanged="@ScreenSizeChanged" OnScreenDimensionChanged="@ScreenDimensionChanged" />
-<PageTitle>I miei cantieri</PageTitle>
+<PageTitle>I miei siti</PageTitle>
 
 <div class="my-3">
     <ConstructorSitesView />
