--- a/ConstructionSiteLibrary/Components/ConstructorSites/ConstructorSiteDetails.razor
+++ b/ConstructionSiteLibrary/Components/ConstructorSites/ConstructorSiteDetails.razor
@@ -101,7 +101,7 @@ else
     private List<DocumentModel> displayedDocuments = [];
     private bool onLoading = false;
     private string search = "";
-    private string pagingSummaryFormat = "Pagina {0} di {1} (Totale {2} cantieri)";
+    private string pagingSummaryFormat = "Pagina {0} di {1} (Totale {2} siti)";
     private int count = 0;
     private int pageSize = GlobalVariables.PageSize;
     private int pageIndex = 0;
