--- a/ConstructionSiteLibrary/Components/Users/UserInfo.razor
+++ b/ConstructionSiteLibrary/Components/Users/UserInfo.razor
@@ -86,7 +86,7 @@
 
     private bool dropdownShow;
 
-    private string avatarImg = "default.png";
+    private string avatarImg = "default.jpg";
 
     IJSObjectReference? module;
 
