--- a/ConstructionSiteLibrary/Layout/NavMenu.razor
+++ b/ConstructionSiteLibrary/Layout/NavMenu.razor
@@ -18,7 +18,7 @@
             {
                 <div class="row">
                     <div class="col-4">
-                        <img class="profile-img" src="default.png" />
+                        <img class="profile-img" src="default.jpg" />
                     </div>
                     <div class="col-8 profile-container">
                         <div class="user-info">                       
