--- a/ConstructionSiteLibrary/Layout/NavMenu.razor
+++ b/ConstructionSiteLibrary/Layout/NavMenu.razor
@@ -152,7 +152,7 @@
             {
                 <div class="axt-logo">
                     <a class="" href="https://www.axterisco.it" target="_blank">
-                        <img src="/logoAXTbianco.png" width="160" height="40" alt="">
+                        <img src="/logoAXTbianco.png" width="100" alt="">
                     </a>
                 </div>
             }
